Fix page content block z-index

--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -37,6 +37,7 @@ body, html
   display: flex
   flex-direction: column
   flex: 1
+  z-index: $defaultZIndex - 1
 //&__content
   // used for sticky footer (flexbox way)
   flex: 1 0 auto
